src/objects/Leave__c.object
<CustomObject>
    <description>This is the child object of Contact</description>
    <fields>
        <fullName>ContactID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup field with contact</description>
        <label>ContactID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leaves</relationshipLabel>
        <relationshipName>Leaves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This is field of end date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This is field for starting date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Leave</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Leave Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leaves</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>